# suriya_analyzer

./: .gitattributes  .gitlab-ci.yml  LICENSE.md  MANIFEST.in  README.md  setup.cfg  setup.py
docs/: conf.py  ghrs.ghrs.rst  ghrs.query.rst  ghrs.rst  index.rst  intro.rst  make.bat  modules.rst
docs/_templates/: footer.html
src/ghrs/: __init__.py  _version.py  ghrs.py  query.py
tests/: test_data.py
