[tox:tox]
envlist = py37
[testenv]
deps = -rrequirements.txt
[metadata]
description-file = README.md
[flake8]
ignore = D203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 10
[versioneer]
VCS = git
style = pep440
versionfile_source = src/ghrs/_version.py
versionfile_build = ghrs/_version.py
tag_prefix =
parentdir_prefix = ghrs-